# Oxide

./: README.md
oxide/: Cargo.toml
oxide/src/: commands.rs  commands_test.rs  config.rs  logic.rs  main.rs  parser.rs  windows_clear.rs
oxide/src/commands/: change_folder.rs  clear.rs  clear_windows.rs  create.rs  create_folder.rs  exit.rs  list.rs  mod.rs  remove.rs  remove_folder.rs  show.rs
