[package]
name = "oxide"
version = "0.1.0"
authors = ["Sammy Knight <knight.samuel@outlook.com>", "Colin Parrott <colinparrott2@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
chrono = "0.4.6"
walkdir = "2.2.8"
rustyline = "6.2.0"
dirs = "2.0.1"
termion = "1.5.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.1"
